--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>MyToken tutorial - Wallet</title>
+    <title>Chess Dapp</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -21,7 +21,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12 col-sm-8 col-sm-push-2">
-          <h1 class="text-center">MyToken</h1>
+          <h1 class="text-center">Chess Dapp</h1>
           <hr/>
           <br/>
         </div>
@@ -30,14 +30,14 @@
         <div class="col-sm-6 col-sm-push-3 col-md-4 col-md-push-4">
           <div class="panel panel-default">
             <div class="panel-heading">
-              <h3 class="panel-title">My Wallet</h3>
+              <h3 class="panel-title">Chess Dapp</h3>
             </div>
             <div class="panel-body">
               <h4>Balance</h4>
-              <strong>Balance</strong>: <span id="TTBalance"></span> TT<br/><br/>
+              <strong>Balance</strong>: <span id="SCTBalance"></span> SCT<br/><br/>
               <h4>Transfer</h4>
-              <input type="text" class="form-control" id="TTTransferAddress" placeholder="Address" />
-              <input type="text" class="form-control" id="TTTransferAmount" placeholder="Amount" />
+              <input type="text" class="form-control" id="SCTTransferAddress" placeholder="Address" />
+              <input type="text" class="form-control" id="SCTTransferAmount" placeholder="Amount" />
               <button class="btn btn-primary" id="transferButton" type="button">Transfer</button>
               <button class="btn btn-primary" id="stakeButton" type="button">Stake Token</button>
             </div>
