--- a/src/index.html
+++ b/src/index.html
@@ -1,49 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Chess Dapp</title>
-
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Landing Page With Light/Dark Mode</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12 col-sm-8 col-sm-push-2">
-          <h1 class="text-center">Chess Dapp</h1>
-          <hr/>
-          <br/>
-        </div>
-      </div>
+    <main>
+      <div class="big-wrapper light">
+        <img src="./images/shape.png" alt="" class="shape" />
 
-        <div class="col-sm-6 col-sm-push-3 col-md-4 col-md-push-4">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title">Chess Dapp</h3>
+        <header>
+          <div class="container">
+            <div class="logo">
+              <img src="./images/2.png" class="logo-img" height="70" width="200" alt="Logo" />
+              <img src="./images/3.png" class="logo-img hide" height="70" width="200" alt="Logo"/>
             </div>
-            <div class="panel-body">
-              <h4>Balance</h4>
-              <strong>Balance</strong>: <span id="SCTBalance"></span> SCT<br/><br/>
-              <h4>Transfer</h4>
-              <input type="text" class="form-control" id="SCTTransferAddress" placeholder="Address" />
-              <input type="text" class="form-control" id="SCTTransferAmount" placeholder="Amount" />
-              <button class="btn btn-primary" id="transferButton" type="button">Transfer</button>
-              <button class="btn btn-primary" id="stakeButton" type="button">Stake Token</button>
+
+            <div class="links">
+              <ul>
+                <li><a href="#">Open Challenges</a></li>
+                <li><a href="#">How to play</a></li>
+                <li><a href="#">About</a></li>
+              </ul>
+            </div>
+
+            <div class="overlay"></div>
+
+            <div class="hamburger-menu">
+              <div class="bar"></div>
             </div>
           </div>
+        </header>
+
+        <div class="showcase-area">
+          <div class="container">
+            <div class="left">
+              <div class="col-sm-6 col-sm-push-3 col-md-4 col-md-push-4">
+                <div class="panel panel-default">
+                  <div class="panel-body text">
+                    <strong>Balance</strong>: <span id="SCTBalance"></span> SCT<br/><br/>
+                    <h4>Challenge an opponent!</h4>
+                    <!-- <input type="text" class="form-control" id="SCTTransferAddress" placeholder="Address" />
+                    <input type="text" class="form-control" id="SCTTransferAmount" placeholder="Amount" />
+                      <a href="#" class="btn" id="transferButton">Transfer</a> -->
+                      <a href="#" class="btn" id="stakeButton" type="button">Create challenge</a>
+                      <a href="#" class="btn" id="stakeButton" type="button">Find games</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="right">
+              <img src="./images/vector.png" height="600" width="100" alt="Person Image" class="person" />
+            </div>
+          </div>
+        </div>
+
+        <div class="bottom-area">
+          <div class="container">
+            <button class="toggle-btn">
+              <i class="far fa-moon"></i>
+              <i class="far fa-sun"></i>
+            </button>
+          </div>
+        </div>
       </div>
-    </div>
+    </main>
+
+    <!-- JavaScript Files -->
+
+    <script src="https://kit.fontawesome.com/a81368914c.js"></script>
+    <script src="js/UI.js"></script>
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
